--- a/locale/fr.json
+++ b/locale/fr.json
@@ -4,7 +4,11 @@
     "close": "Fermer le menu",
     "open": "Menu"
   },
-  "IGO": "IGO",
+  "toastPanel": {
+    "title": "Entités trouvées sur la carte",
+    "listButton": "Retourner à la liste des entités"
+  },
+  "IGO": "IGO2",
   "noEntityStore": "Aucune table disponible pour ce jeu de données",
   "coordinates": "Afficher les coordonnées",
   "googleMap": "Afficher sur Google maps",
