--- a/src/locale/fr.json
+++ b/src/locale/fr.json
@@ -37,7 +37,8 @@
     "html": "<h1>Bienvenue dans {{title}}, l'application cartographique du gouvernement du Québec</h1><h2>Débutez en sélectionnant un contexte &#x2605;</h2><h2>Version {{version}}, en date du {{releaseDate}}</h2>",
     "title": "Fenêtre d'accueil",
     "closeButton": "Fermer",
-    "notShowCheck": "Ne plus afficher"
+    "notShowCheck": "Ne plus afficher",
+    "merryChristmas": "L'ensemble des collaborateurs IGO vous souhaite de Joyeuses Fêtes !"
   },
   "oldBrowser": {
     "title": "Navigateur obsolète",
