--- a/locale/libs_locale/en.json
+++ b/locale/libs_locale/en.json
@@ -560,7 +560,7 @@
 				"online": "Online mode",
 				"zoomIn": "Zoom in ({{zoom}})",
 				"zoomOut": "Zoom out ({{zoom}})",
-				"resetRotation": "Set map to north",
+				"resetRotation": "Azimuth: {{azimuth}}°N. Rotation: {{rotation}}°. Set map to north",
 				"tipRotation": "Hold Alt and SHIFT while dragging on map to rotate the map.",
 				"preventSreenLock": "Prevent the screen to enter in lock mode.",
 				"letScreenLock": "Allow the screen to enter in lock mode."
@@ -1026,6 +1026,10 @@
 				"link": {
 					"message": "Hyperlink copied to clipboard"
 				}
+			},
+			"indexedDb": {
+				"data-download-start": "Downloading data. Please don't leave the current app.",
+				"data-download-completed": "Data download completed"
 			}
 		},
 		"integration": {
