--- a/locale/en.json
+++ b/locale/en.json
@@ -55,8 +55,8 @@
   "googleMap": "Show in Google Maps",
   "googleStreetView": "Show in Google Street View",
   "welcomeWindow": {
-    "html": "<h1>Welcome to {{title}, the Québec goverment mapping application </h1><h2>Version {{version}}, build on {{releaseDate}}</h2>",
-    "title": "",
+    "html": "<h1>Welcome to {{title}}, the Québec government mapping application </h1><h2>Version {{version}}, build on {{releaseDate}}</h2>",
+    "title": "Home window",
     "closeButton": "Close",
     "notShowCheck": "Do not show again"
   },
@@ -242,6 +242,13 @@
     "legend-tab": "Let's toggle legend tab.",
     "legend-tab-description": "This tab can be used to display all layer's legend. By default, only visible layers at active scale will have their legend displayed.",
     "legend-tab-all": "Allow to also display non visible layer's legend at active scale."
+  },
+  "pwa": {
+    "new-version-title": "New version available. ",
+    "new-version": "Do you want to reload the app?",
+    "data-download-start": "Downloading data for offline use. Please don't leave the current app.",
+    "data-download-completed": "Offline data download completed"
+
   },
   "messages": {
     "title": "Title from a translation.",
