--- a/locale/libs_locale/fr.json
+++ b/locale/libs_locale/fr.json
@@ -292,6 +292,7 @@
 				"layer.addToMapOutRange": "Ajouter à la carte. La donnée est non visible à l'échelle active. Veuillez zoomer +/- si vous voulez l'apercevoir à la carte.",
 				"layer.removeFromMap": "Retirer de la carte",
 				"layer.removeFromMapOutRange": "Retirer de la carte. La donnée est non visible à l'échelle active. Veuillez zoomer +/- si vous voulez l'apercevoir à la carte.",
+				"layer.removeFromMapNotVisible": "Retirer de la carte. La donnée est visible à l'échelle active, mais n'est pas activée. Veuillez basculer vers l'outil carte pour la rendre visible.",
 				"group.addToMap": "Ajouter toutes les couches de ce groupe à la carte",
 				"group.removeFromMap": "Retirer toutes les couches de ce groupe de la carte",
 				"baseLayers": "Fonds de carte",
@@ -547,7 +548,11 @@
 				"style": {
 					"styleModal": "Modifier le style",
 					"styleModalTooltip": "Éditer le style des entités sélectionnées"
-				}
+				},
+				"saveBtn": "Sauvegarder",
+				"cancelBtn": "Cancel",
+				"saveFeatureInLayer": "Ajouter la sélection dans une couche",
+				"chooseOrSet": "Choisir une couche ou définir un nouveau nom"
 			},
 			"download": {
 				"action": "Télécharger les données associées",
@@ -608,7 +613,8 @@
 					"topright": "Coin haut droit de la carte",
 					"bottomleft": "Coin bas gauche de la carte",
 					"bottomright": "Coin bas droit de la carte",
-					"newpage": "Sur une nouvelle page"
+					"newpage": "Sur une nouvelle page",
+					"newimage": "Sur une nouvelle image"
 				}
 			},
 			"directionsForm": {
@@ -708,6 +714,7 @@
 				"layer.placeholder": "Rechercher une couche de données.",
 				"ichercheReverse.name": "Recherche par coordonnées",
 				"clearSearch": "Effacer la recherche",
+				"addToLayer": "Ajouter à une couche",
 				"ilayer": {
 					"name": "Couches",
 					"properties": {
@@ -771,7 +778,9 @@
 				"coordinates": {
 					"name": "Coordonnées",
 					"coord": "Coordonnée (longitude, latitude)",
+					"reversedCoord": "Coordonnée (latitude, longitude)",
 					"coordDMS": "Coordonnée (longitude, latitude) (DMS)",
+					"reversedCoordDMS": "Coordonnée (latitude, longitude) (DMS)",
 					"radius": "Rayon",
 					"conf": "Confiance"
 				},
@@ -786,6 +795,11 @@
 				"searchResultsGeometry": {
 					"title": "Montrer tous les résultats",
 					"tooltip": "Afficher/cacher la géométrie des résultats"
+				},
+				"reverseCoordFormat": {
+					"title": "Afficher les données en latitude/longitude",
+					"tooltipLonLat": "Afficher les données en latitude/longitude.",
+					"tooltipLatLon": "Afficher les données en longitude/latitude."
 				},
 				"searchSources": {
 					"selectAll": "Tout sélectionner",
@@ -892,7 +906,7 @@
 				"secteur": "Secteurs",
 				"immeubles": "Immeubles patrimoniaux",
 				"sites": "Sites patrimoniaux",
-				"cpe": "Centre de la petite enfance",
+				"service-garde": "Services de garde",
 				"public": "Écoles publiques",
 				"prive": "Écoles privés",
 				"gouvernemental": "Écoles gouvernementales",
