--- a/locale/libs_locale/fr.json
+++ b/locale/libs_locale/fr.json
@@ -403,6 +403,9 @@
 				},
 				"combinedLayers": "couchesCombinees"
 			},
+			"import": {
+				"promptStoreToIdb": "Est-ce que vous voulez sauvegarder cette couche d'information afin d'être utilisée ultérieurement dans une autre session?"
+			},
 			"importExportForm": {
 				"exportButton": "Exporter",
 				"exportButtonLink": "Ouvrir le lien",
@@ -554,6 +557,19 @@
 				"saveFeatureInLayer": "Ajouter la sélection dans une couche",
 				"chooseOrSet": "Choisir une couche ou définir un nouveau nom"
 			},
+			"style": {
+				"styleModal": "Modifier le style",
+				"styleModalTooltipLayer": "Éditer le style des la présente couche.",
+				"styleModalTooltipSelected": "Éditer le style des entités sélectionnées",
+				"colorPicker": "Cliquer pour ouvrir le sélecteur de couleurs",
+				"cancel": "Annuler",
+				"fill": "Remplissage",
+				"stroke": "Contour",
+				"fontSize": "Taille de police",
+				"fontStyle": "Style de police",
+				"offsetX": "Décalage horizontal",
+				"offsetY": "Décalage vertical"
+			},
 			"download": {
 				"action": "Télécharger les données associées",
 				"title": "Téléchargement des données",
@@ -571,7 +587,7 @@
 				"zoomOut": "Dézoomer ({{zoom}})",
 				"resetRotation": "Azimut: {{azimuth}}°N. Rotation: {{rotation}}°. Réinitialiser la carte vers le nord",
 				"tipRotation": "Maintenez les touches Alt et Majuscule (shift) tout en cliquant sur la carte pour faire pivoter la carte",
-				"preventSreenLock": "Prévient l'écran d'entrer en mode verrouillé.",
+				"preventScreenLock": "Prévient l'écran d'entrer en mode verrouillé.",
 				"letScreenLock": "Permet l'écran d'entrer en mode verrouillé."
 			},
 			"metadata": {
@@ -745,6 +761,13 @@
 						"canada": "Canada"
 					}
 				},
+				"workspace": {
+					"name": "Données importées (vecteurs)",
+					"restrictExtent": {
+						"map": "À l'étendue de la carte",
+						"whole": "L'entièreté du jeu de données"
+					}
+				},
 				"icherche": {
 					"name": "iCherche",
 					"type": {
@@ -805,6 +828,7 @@
 					"selectAll": "Tout sélectionner",
 					"unselectAll": "Tout désélectionner",
 					"settings": {
+						"datasets": "Jeu de données",
 						"results type": "Type de résultat",
 						"ecmax": "Écart maximal",
 						"radius": "Rayon de recherche",
@@ -984,12 +1008,10 @@
 				"abort": "Annuler le dessin en cours",
 				"cancel": "Annuler",
 				"Circle": "Cercle",
-				"colorPicker": "Cliquer pour ouvrir le sélecteur de couleurs",
 				"dialogInstruction": "Veuillez entrer l'étiquette de votre dessin",
 				"dialogTitle": "Étiquette",
 				"delete": "Retirer les dessins de la carte",
 				"drawing": "Dessins",
-				"fill": "Remplissage",
 				"finish": "Terminer le dessin en cours",
 				"freehandMode": "Dessiner à main levée",
 				"icon": "Icônes",
@@ -1003,14 +1025,9 @@
 				"Polygon": "Polygone",
 				"radius": "Rayon",
 				"shortcuts": "Raccourcis clavier",
-				"stroke": "Contour",
 				"styleSelect": "Sélectionner le style",
 				"toggleMapTooltips": "Afficher les étiquettes",
 				"undo": "Retirer le dernier sommet",
-				"fontSize": "Taille de police",
-				"fontStyle": "Style de police",
-				"offsetX": "Décalage horizontal",
-				"offsetY": "Décalage vertical",
 				"layer": {
 					"title": "Titre",
 					"createNewLayer": "Créer une nouvelle couche de dessin",
@@ -1181,7 +1198,7 @@
 					"coordinates": "Coordonnées du centre de la carte",
 					"copyMsg": "Coordonnées copiées",
 					"copyTitle": "Coordonnées du centre",
-					"center": "Centre",
+					"center": "Afficher le centre de la carte",
 					"coordSystem": "Système de coordonnées",
 					"zoom": "Niveau de zoom courant: ",
 					"scale": "Échelle cartographique: ",
